core/toki_pona.output
State 51 conflicts: 1 shift/reduce
State 65 conflicts: 1 shift/reduce
State 77 conflicts: 47 reduce/reduce
State 91 conflicts: 47 reduce/reduce
State 108 conflicts: 94 shift/reduce
State 120 conflicts: 1 shift/reduce, 50 reduce/reduce
State 122 conflicts: 93 shift/reduce
State 143 conflicts: 1 shift/reduce, 50 reduce/reduce
State 154 conflicts: 93 shift/reduce
State 156 conflicts: 1 shift/reduce, 50 reduce/reduce
State 168 conflicts: 5 shift/reduce
State 171 conflicts: 1 shift/reduce
State 172 conflicts: 56 shift/reduce
State 177 conflicts: 56 shift/reduce
State 190 conflicts: 114 reduce/reduce
State 191 conflicts: 114 reduce/reduce
State 192 conflicts: 114 reduce/reduce
State 193 conflicts: 114 reduce/reduce
State 194 conflicts: 114 reduce/reduce
State 195 conflicts: 114 reduce/reduce
State 196 conflicts: 114 reduce/reduce
State 197 conflicts: 114 reduce/reduce
State 198 conflicts: 114 reduce/reduce
State 199 conflicts: 114 reduce/reduce
State 202 conflicts: 114 reduce/reduce
State 203 conflicts: 114 reduce/reduce
State 206 conflicts: 114 reduce/reduce
State 208 conflicts: 114 reduce/reduce
State 210 conflicts: 114 reduce/reduce
State 213 conflicts: 114 reduce/reduce
State 214 conflicts: 114 reduce/reduce
State 215 conflicts: 114 reduce/reduce
State 216 conflicts: 114 reduce/reduce
State 217 conflicts: 114 reduce/reduce
State 218 conflicts: 114 reduce/reduce
State 219 conflicts: 114 reduce/reduce
State 220 conflicts: 114 reduce/reduce
State 222 conflicts: 114 reduce/reduce
State 223 conflicts: 114 reduce/reduce
State 224 conflicts: 114 reduce/reduce
State 225 conflicts: 114 reduce/reduce
State 226 conflicts: 114 reduce/reduce
State 227 conflicts: 114 reduce/reduce
State 228 conflicts: 114 reduce/reduce
State 229 conflicts: 114 reduce/reduce
State 230 conflicts: 114 reduce/reduce
State 231 conflicts: 114 reduce/reduce
State 232 conflicts: 114 reduce/reduce
State 233 conflicts: 114 reduce/reduce
State 234 conflicts: 114 reduce/reduce
State 236 conflicts: 114 reduce/reduce
State 237 conflicts: 114 reduce/reduce
State 238 conflicts: 114 reduce/reduce
State 239 conflicts: 114 reduce/reduce
State 240 conflicts: 114 reduce/reduce
State 241 conflicts: 114 reduce/reduce
State 243 conflicts: 114 reduce/reduce
State 244 conflicts: 114 reduce/reduce
State 245 conflicts: 114 reduce/reduce
State 246 conflicts: 114 reduce/reduce
State 247 conflicts: 114 reduce/reduce
State 248 conflicts: 114 reduce/reduce
State 249 conflicts: 114 reduce/reduce
State 250 conflicts: 114 reduce/reduce
State 251 conflicts: 114 reduce/reduce
State 252 conflicts: 114 reduce/reduce
State 254 conflicts: 114 reduce/reduce
State 255 conflicts: 114 reduce/reduce
State 256 conflicts: 114 reduce/reduce
State 258 conflicts: 56 shift/reduce
State 260 conflicts: 56 shift/reduce
State 265 conflicts: 2 shift/reduce
State 267 conflicts: 2 shift/reduce
State 275 conflicts: 42 shift/reduce
State 341 conflicts: 93 shift/reduce
State 342 conflicts: 93 shift/reduce
State 344 conflicts: 56 shift/reduce, 1 reduce/reduce
State 346 conflicts: 56 shift/reduce, 1 reduce/reduce
State 348 conflicts: 49 shift/reduce
State 352 conflicts: 2 shift/reduce
State 359 conflicts: 12 shift/reduce
State 360 conflicts: 3 shift/reduce
State 361 conflicts: 2 shift/reduce
State 362 conflicts: 2 shift/reduce
State 373 conflicts: 93 reduce/reduce
State 374 conflicts: 93 reduce/reduce


Grammar

    0 $accept: toki_pona $end

    1 toki_pona: sentence ENDMARK

    2 sentence: svo_sentence
    3         | condition svo_sentence
    4         | o_sentence

    5 o_sentence: o_sentence_1
    6           | o_sentence_2

    7 o_sentence_1: noun_phase O
    8             | noun_phase O vo_struct

    9 o_sentence_2: O vo_struct
   10             | condition O vo_struct

   11 condition: svo_sentence LA
   12          | noun_phase LA
   13          | TASO svo_sentence
   14          | KEN LA
   15          | ANTE LA

   16 svo_sentence: subject vo_struct

   17 subject: MI
   18        | SINA
   19        | norm_noun_phase LI

   20 norm_noun_phase: norm_subject_noun
   21                | structed_noun_phase

   22 structed_noun_phase: decorated_noun_struct
   23                    | noun_phase conj noun_phase

   24 noun_phase: noun
   25           | structed_noun_phase

   26 conj: EN
   27     | ANU

   28 decorated_noun_struct: noun decorator
   29                      | noun noun
   30                      | noun noun decorator

   31 decorator: decorator_word
   32          | decorator_word decorator

   33 vo_struct: verb_phase
   34          | verb_phase LI vo_struct

   35 verb_phase: no_acceptance_verb_phase
   36           | acceptance_verb_phase
   37           | verb_phase po_phase

   38 no_acceptance_verb_phase: verb_group
   39                         | LON noun_phase
   40                         | TAWA noun_phase
   41                         | modal_verb LON noun_phase
   42                         | modal_verb TAWA noun_phase

   43 acceptance_verb_phase: verb_group acceptance_obj
   44                      | modal_verb verb_group acceptance_obj

   45 acceptance_obj: E noun_phase
   46               | E noun_phase acceptance_obj

   47 verb_group: verb
   48           | modal_verb verb
   49           | verb decorator
   50           | YnN_verb
   51           | modal_verb YnN_verb
   52           | YnN_verb decorator

   53 YnN_verb: verb ALA verb

   54 po_phase: prepostion noun_phase
   55         | prepostion noun_phase po_phase

   56 modal_verb: postive_modal_verb
   57           | negative_modal_verb
   58           | YnN_modal_verb

   59 postive_modal_verb: KAMA
   60                   | KEN
   61                   | WILE

   62 negative_modal_verb: postive_modal_verb ALA

   63 YnN_modal_verb: KAMA ALA KAMA
   64               | KEN ALA KEN
   65               | WILE ALA WILE

   66 verb: LUKIN
   67     | WEKA
   68     | IKE
   69     | KULE
   70     | PINI
   71     | JO
   72     | PONA
   73     | MUTE
   74     | LAPE
   75     | IJO
   76     | MOLI
   77     | PAKALA
   78     | LAWA
   79     | SONA
   80     | SULI
   81     | TAWA
   82     | WILE
   83     | JAN
   84     | KEPEKEN
   85     | OPEN
   86     | TOKI
   87     | LETE
   88     | OLIN
   89     | ANTE
   90     | AWEN
   91     | WAWA
   92     | LILI
   93     | LON
   94     | SELI
   95     | SIN
   96     | TU
   97     | UTALA
   98     | SITELEN
   99     | MUSI
  100     | WAN
  101     | SUWI
  102     | ANPA
  103     | KAMA
  104     | POKA
  105     | TELO
  106     | MOKU
  107     | PILIN
  108     | TOMO
  109     | PIMEJA
  110     | UNPA
  111     | NASA
  112     | JAKI
  113     | KALAMA
  114     | PALI
  115     | PANA
  116     | KEN

  117 noun: MI
  118     | SINA
  119     | norm_subject_noun

  120 norm_subject_noun: PINI
  121                  | MUSI
  122                  | KASI
  123                  | SIKE
  124                  | IKE
  125                  | LUPA
  126                  | PIPI
  127                  | POKI
  128                  | PONA
  129                  | KALA
  130                  | NANPA
  131                  | WALO
  132                  | PAKALA
  133                  | ILO
  134                  | WILE
  135                  | ANTE
  136                  | SULI
  137                  | LUKA
  138                  | PILIN
  139                  | NASIN
  140                  | AKESI
  141                  | SEWI
  142                  | MAMA
  143                  | TAWA
  144                  | MIJE
  145                  | MONSI
  146                  | KAMA
  147                  | WAWA
  148                  | MUTE
  149                  | UNPA
  150                  | TU
  151                  | SITELEN
  152                  | SEME
  153                  | MANI
  154                  | SONA
  155                  | SUNO
  156                  | ALI
  157                  | NENA
  158                  | KALAMA
  159                  | NIMI
  160                  | LILI
  161                  | TOMO
  162                  | KULUPU
  163                  | NI
  164                  | PALI
  165                  | LEN
  166                  | KUTE
  167                  | WEKA
  168                  | JO
  169                  | SUPA
  170                  | MUN
  171                  | JAKI
  172                  | OLIN
  173                  | SINPIN
  174                  | POKA
  175                  | PALISA
  176                  | SOWELI
  177                  | PIMEJA
  178                  | ALE
  179                  | LIPU
  180                  | ONA
  181                  | SIJELO
  182                  | KIWEN
  183                  | LETE
  184                  | KEN
  185                  | KILI
  186                  | ALA
  187                  | UTALA
  188                  | SELO
  189                  | WASO
  190                  | SUWI
  191                  | TAN
  192                  | WAN
  193                  | LAWA
  194                  | KULE
  195                  | TENPO
  196                  | MOKU
  197                  | UTA
  198                  | OKO
  199                  | INSA
  200                  | TELO
  201                  | SELI
  202                  | MELI
  203                  | JAN
  204                  | PANA
  205                  | NOKA
  206                  | TOKI
  207                  | LINJA
  208                  | MOLI
  209                  | IJO
  210                  | MA

  211 decorator_word: IJO
  212               | SEWI
  213               | INSA
  214               | KIN
  215               | LILI
  216               | MOKU
  217               | PINI
  218               | IKE
  219               | SAMA
  220               | MI
  221               | SEME
  222               | SULI
  223               | SIN
  224               | MUTE
  225               | KIWEN
  226               | PALI
  227               | PIMEJA
  228               | PONA
  229               | LASO
  230               | NASA
  231               | SIKE
  232               | KAMA
  233               | MOLI
  234               | KUTE
  235               | ALE
  236               | WAN
  237               | ALI
  238               | LOJE
  239               | LETE
  240               | LAPE
  241               | KULE
  242               | WIKE
  243               | JAKI
  244               | MUSI
  245               | ONA
  246               | KULUPU
  247               | UTA
  248               | TELO
  249               | WALO
  250               | OLIN
  251               | LAWA
  252               | AWEN
  253               | TASO
  254               | LUKIN
  255               | TU
  256               | SELI
  257               | SINA
  258               | TAWA
  259               | MIJE
  260               | MUN
  261               | PAKALA
  262               | NI
  263               | TOMO
  264               | WEKA
  265               | WAWA
  266               | JAN
  267               | TOKI
  268               | ANTE
  269               | KALAMA
  270               | MAMA
  271               | UNPA
  272               | MONSI
  273               | ALA
  274               | POKA
  275               | JELO
  276               | MELI
  277               | SUWI

  278 prepostion: LON
  279           | POKA
  280           | TAWA
  281           | TAN
  282           | KEPEKEN
  283           | SAMA
  284           | LI
  285           | LA
  286           | O
  287           | ANU
  288           | EN
  289           | E


Terminals, with rules where they appear

$end (0) 0
error (256)
ALA (258) 53 62 63 64 65 186 273
SONA (259) 79 154
WAWA (260) 91 147 265
LUPA (261) 125
ONA (262) 180 245
NANPA (263) 130
IJO (264) 75 209 211
ILO (265) 133
OLIN (266) 88 172 250
WILE (267) 61 65 82 134
MUTE (268) 73 148 224
OKO (269) 198
SEWI (270) 141 212
LON (271) 39 41 93 278
TENPO (272) 195
JAKI (273) 112 171 243
JO (274) 71 168
NASIN (275) 139
TOKI (276) 86 206 267
SUNO (277) 155
UTA (278) 197 247
WIKE (279) 242
NASA (280) 111 230
ALI (281) 156 237
WALO (282) 131 249
LASO (283) 229
KILI (284) 185
SUPA (285) 169
AWEN (286) 90 252
LETE (287) 87 183 239
AKESI (288) 140
NENA (289) 157
UTALA (290) 97 187
NIMI (291) 159
SINPIN (292) 173
LAPE (293) 74 240
SITELEN (294) 98 151
POKA (295) 104 174 274 279
SAMA (296) 219 283
MOLI (297) 76 208 233
LUKIN (298) 66 254
JELO (299) 275
PAKALA (300) 77 132 261
MA (301) 210
LEN (302) 165
ALE (303) 178 235
LAWA (304) 78 193 251
KIWEN (305) 182 225
PINI (306) 70 120 217
WASO (307) 189
KULUPU (308) 162 246
PALI (309) 114 164 226
JAN (310) 83 203 266
OPEN (311) 85
TASO (312) 13 253
KUTE (313) 166 234
KALA (314) 129
TELO (315) 105 200 248
MONSI (316) 145 272
LILI (317) 92 160 215
KEN (318) 14 60 64 116 184
TOMO (319) 108 161 263
MAMA (320) 142 270
MIJE (321) 144 259
PONA (322) 72 128 228
SEME (323) 152 221
TU (324) 96 150 255
MELI (325) 202 276
PIMEJA (326) 109 177 227
PIPI (327) 126
NOKA (328) 205
KULE (329) 69 194 241
SIN (330) 95 223
SOWELI (331) 176
SUWI (332) 101 190 277
ANTE (333) 15 89 135 268
SIKE (334) 123 231
KALAMA (335) 113 158 269
LINJA (336) 207
KASI (337) 122
SIJELO (338) 181
MUN (339) 170 260
PANA (340) 115 204
TAWA (341) 40 42 81 143 258 280
LOJE (342) 238
TAN (343) 191 281
KEPEKEN (344) 84 282
KAMA (345) 59 63 103 146 232
SELO (346) 188
MI (347) 17 117 220
POKI (348) 127
SELI (349) 94 201 256
IKE (350) 68 124 218
PILIN (351) 107 138
WAN (352) 100 192 236
LUKA (353) 137
MANI (354) 153
ANPA (355) 102
SULI (356) 80 136 222
MUSI (357) 99 121 244
WEKA (358) 67 167 264
INSA (359) 199 213
LIPU (360) 179
MOKU (361) 106 196 216
KIN (362) 214
SINA (363) 18 118 257
NI (364) 163 262
UNPA (365) 110 149 271
PALISA (366) 175
LI (367) 19 34 284
LA (368) 11 12 14 15 285
O (369) 7 8 9 10 286
ANU (370) 27 287
EN (371) 26 288
E (372) 45 46 289
ENDMARK (373) 1


Nonterminals, with rules where they appear

$accept (119)
    on left: 0
toki_pona (120)
    on left: 1, on right: 0
sentence (121)
    on left: 2 3 4, on right: 1
o_sentence (122)
    on left: 5 6, on right: 4
o_sentence_1 (123)
    on left: 7 8, on right: 5
o_sentence_2 (124)
    on left: 9 10, on right: 6
condition (125)
    on left: 11 12 13 14 15, on right: 3 10
svo_sentence (126)
    on left: 16, on right: 2 3 11 13
subject (127)
    on left: 17 18 19, on right: 16
norm_noun_phase (128)
    on left: 20 21, on right: 19
structed_noun_phase (129)
    on left: 22 23, on right: 21 25
noun_phase (130)
    on left: 24 25, on right: 7 8 12 23 39 40 41 42 45 46 54 55
conj (131)
    on left: 26 27, on right: 23
decorated_noun_struct (132)
    on left: 28 29 30, on right: 22
decorator (133)
    on left: 31 32, on right: 28 30 32 49 52
vo_struct (134)
    on left: 33 34, on right: 8 9 10 16 34
verb_phase (135)
    on left: 35 36 37, on right: 33 34 37
no_acceptance_verb_phase (136)
    on left: 38 39 40 41 42, on right: 35
acceptance_verb_phase (137)
    on left: 43 44, on right: 36
acceptance_obj (138)
    on left: 45 46, on right: 43 44 46
verb_group (139)
    on left: 47 48 49 50 51 52, on right: 38 43 44
YnN_verb (140)
    on left: 53, on right: 50 51 52
po_phase (141)
    on left: 54 55, on right: 37 55
modal_verb (142)
    on left: 56 57 58, on right: 41 42 44 48 51
postive_modal_verb (143)
    on left: 59 60 61, on right: 56 62
negative_modal_verb (144)
    on left: 62, on right: 57
YnN_modal_verb (145)
    on left: 63 64 65, on right: 58
verb (146)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
    84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103
    104 105 106 107 108 109 110 111 112 113 114 115 116, on right:
    47 48 49 53
noun (147)
    on left: 117 118 119, on right: 24 28 29 30
norm_subject_noun (148)
    on left: 120 121 122 123 124 125 126 127 128 129 130 131 132 133
    134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149
    150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165
    166 167 168 169 170 171 172 173 174 175 176 177 178 179 180 181
    182 183 184 185 186 187 188 189 190 191 192 193 194 195 196 197
    198 199 200 201 202 203 204 205 206 207 208 209 210, on right:
    20 119
decorator_word (149)
    on left: 211 212 213 214 215 216 217 218 219 220 221 222 223 224
    225 226 227 228 229 230 231 232 233 234 235 236 237 238 239 240
    241 242 243 244 245 246 247 248 249 250 251 252 253 254 255 256
    257 258 259 260 261 262 263 264 265 266 267 268 269 270 271 272
    273 274 275 276 277, on right: 31 32
prepostion (150)
    on left: 278 279 280 281 282 283 284 285 286 287 288 289, on right:
    54 55


state 0

    0 $accept: . toki_pona $end

    ALA      shift, and go to state 1
    SONA     shift, and go to state 2
    WAWA     shift, and go to state 3
    LUPA     shift, and go to state 4
    ONA      shift, and go to state 5
    NANPA    shift, and go to state 6
    IJO      shift, and go to state 7
    ILO      shift, and go to state 8
    OLIN     shift, and go to state 9
    WILE     shift, and go to state 10
    MUTE     shift, and go to state 11
    OKO      shift, and go to state 12
    SEWI     shift, and go to state 13
    TENPO    shift, and go to state 14
    JAKI     shift, and go to state 15
    JO       shift, and go to state 16
    NASIN    shift, and go to state 17
    TOKI     shift, and go to state 18
    SUNO     shift, and go to state 19
    UTA      shift, and go to state 20
    ALI      shift, and go to state 21
    WALO     shift, and go to state 22
    KILI     shift, and go to state 23
    SUPA     shift, and go to state 24
    LETE     shift, and go to state 25
    AKESI    shift, and go to state 26
    NENA     shift, and go to state 27
    UTALA    shift, and go to state 28
    NIMI     shift, and go to state 29
    SINPIN   shift, and go to state 30
    SITELEN  shift, and go to state 31
    POKA     shift, and go to state 32
    MOLI     shift, and go to state 33
    PAKALA   shift, and go to state 34
    MA       shift, and go to state 35
    LEN      shift, and go to state 36
    ALE      shift, and go to state 37
    LAWA     shift, and go to state 38
    KIWEN    shift, and go to state 39
    PINI     shift, and go to state 40
    WASO     shift, and go to state 41
    KULUPU   shift, and go to state 42
    PALI     shift, and go to state 43
    JAN      shift, and go to state 44
    TASO     shift, and go to state 45
    KUTE     shift, and go to state 46
    KALA     shift, and go to state 47
    TELO     shift, and go to state 48
    MONSI    shift, and go to state 49
    LILI     shift, and go to state 50
    KEN      shift, and go to state 51
    TOMO     shift, and go to state 52
    MAMA     shift, and go to state 53
    MIJE     shift, and go to state 54
    PONA     shift, and go to state 55
    SEME     shift, and go to state 56
    TU       shift, and go to state 57
    MELI     shift, and go to state 58
    PIMEJA   shift, and go to state 59
    PIPI     shift, and go to state 60
    NOKA     shift, and go to state 61
    KULE     shift, and go to state 62
    SOWELI   shift, and go to state 63
    SUWI     shift, and go to state 64
    ANTE     shift, and go to state 65
    SIKE     shift, and go to state 66
    KALAMA   shift, and go to state 67
    LINJA    shift, and go to state 68
    KASI     shift, and go to state 69
    SIJELO   shift, and go to state 70
    MUN      shift, and go to state 71
    PANA     shift, and go to state 72
    TAWA     shift, and go to state 73
    TAN      shift, and go to state 74
    KAMA     shift, and go to state 75
    SELO     shift, and go to state 76
    MI       shift, and go to state 77
    POKI     shift, and go to state 78
    SELI     shift, and go to state 79
    IKE      shift, and go to state 80
    PILIN    shift, and go to state 81
    WAN      shift, and go to state 82
    LUKA     shift, and go to state 83
    MANI     shift, and go to state 84
    SULI     shift, and go to state 85
    MUSI     shift, and go to state 86
    WEKA     shift, and go to state 87
    INSA     shift, and go to state 88
    LIPU     shift, and go to state 89
    MOKU     shift, and go to state 90
    SINA     shift, and go to state 91
    NI       shift, and go to state 92
    UNPA     shift, and go to state 93
    PALISA   shift, and go to state 94
    O        shift, and go to state 95

    toki_pona              go to state 96
    sentence               go to state 97
    o_sentence             go to state 98
    o_sentence_1           go to state 99
    o_sentence_2           go to state 100
    condition              go to state 101
    svo_sentence           go to state 102
    subject                go to state 103
    norm_noun_phase        go to state 104
    structed_noun_phase    go to state 105
    noun_phase             go to state 106
    decorated_noun_struct  go to state 107
    noun                   go to state 108
    norm_subject_noun      go to state 109


state 1

  186 norm_subject_noun: ALA .

    $default  reduce using rule 186 (norm_subject_noun)


state 2

  154 norm_subject_noun: SONA .

    $default  reduce using rule 154 (norm_subject_noun)


state 3

  147 norm_subject_noun: WAWA .

    $default  reduce using rule 147 (norm_subject_noun)


state 4

  125 norm_subject_noun: LUPA .

    $default  reduce using rule 125 (norm_subject_noun)


state 5

  180 norm_subject_noun: ONA .

    $default  reduce using rule 180 (norm_subject_noun)


state 6

  130 norm_subject_noun: NANPA .

    $default  reduce using rule 130 (norm_subject_noun)


state 7

  209 norm_subject_noun: IJO .

    $default  reduce using rule 209 (norm_subject_noun)


state 8

  133 norm_subject_noun: ILO .

    $default  reduce using rule 133 (norm_subject_noun)


state 9

  172 norm_subject_noun: OLIN .

    $default  reduce using rule 172 (norm_subject_noun)


state 10

  134 norm_subject_noun: WILE .

    $default  reduce using rule 134 (norm_subject_noun)


state 11

  148 norm_subject_noun: MUTE .

    $default  reduce using rule 148 (norm_subject_noun)


state 12

  198 norm_subject_noun: OKO .

    $default  reduce using rule 198 (norm_subject_noun)


state 13

  141 norm_subject_noun: SEWI .

    $default  reduce using rule 141 (norm_subject_noun)


state 14

  195 norm_subject_noun: TENPO .

    $default  reduce using rule 195 (norm_subject_noun)


state 15

  171 norm_subject_noun: JAKI .

    $default  reduce using rule 171 (norm_subject_noun)


state 16

  168 norm_subject_noun: JO .

    $default  reduce using rule 168 (norm_subject_noun)


state 17

  139 norm_subject_noun: NASIN .

    $default  reduce using rule 139 (norm_subject_noun)


state 18

  206 norm_subject_noun: TOKI .

    $default  reduce using rule 206 (norm_subject_noun)


state 19

  155 norm_subject_noun: SUNO .

    $default  reduce using rule 155 (norm_subject_noun)


state 20

  197 norm_subject_noun: UTA .

    $default  reduce using rule 197 (norm_subject_noun)


state 21

  156 norm_subject_noun: ALI .

    $default  reduce using rule 156 (norm_subject_noun)


state 22

  131 norm_subject_noun: WALO .

    $default  reduce using rule 131 (norm_subject_noun)


state 23

  185 norm_subject_noun: KILI .

    $default  reduce using rule 185 (norm_subject_noun)


state 24

  169 norm_subject_noun: SUPA .

    $default  reduce using rule 169 (norm_subject_noun)


state 25

  183 norm_subject_noun: LETE .

    $default  reduce using rule 183 (norm_subject_noun)


state 26

  140 norm_subject_noun: AKESI .

    $default  reduce using rule 140 (norm_subject_noun)


state 27

  157 norm_subject_noun: NENA .

    $default  reduce using rule 157 (norm_subject_noun)


state 28

  187 norm_subject_noun: UTALA .

    $default  reduce using rule 187 (norm_subject_noun)


state 29

  159 norm_subject_noun: NIMI .

    $default  reduce using rule 159 (norm_subject_noun)


state 30

  173 norm_subject_noun: SINPIN .

    $default  reduce using rule 173 (norm_subject_noun)


state 31

  151 norm_subject_noun: SITELEN .

    $default  reduce using rule 151 (norm_subject_noun)


state 32

  174 norm_subject_noun: POKA .

    $default  reduce using rule 174 (norm_subject_noun)


state 33

  208 norm_subject_noun: MOLI .

    $default  reduce using rule 208 (norm_subject_noun)


state 34

  132 norm_subject_noun: PAKALA .

    $default  reduce using rule 132 (norm_subject_noun)


state 35

  210 norm_subject_noun: MA .

    $default  reduce using rule 210 (norm_subject_noun)


state 36

  165 norm_subject_noun: LEN .

    $default  reduce using rule 165 (norm_subject_noun)


state 37

  178 norm_subject_noun: ALE .

    $default  reduce using rule 178 (norm_subject_noun)


state 38

  193 norm_subject_noun: LAWA .

    $default  reduce using rule 193 (norm_subject_noun)


state 39

  182 norm_subject_noun: KIWEN .

    $default  reduce using rule 182 (norm_subject_noun)


state 40

  120 norm_subject_noun: PINI .

    $default  reduce using rule 120 (norm_subject_noun)


state 41

  189 norm_subject_noun: WASO .

    $default  reduce using rule 189 (norm_subject_noun)


state 42

  162 norm_subject_noun: KULUPU .

    $default  reduce using rule 162 (norm_subject_noun)


state 43

  164 norm_subject_noun: PALI .

    $default  reduce using rule 164 (norm_subject_noun)


state 44

  203 norm_subject_noun: JAN .

    $default  reduce using rule 203 (norm_subject_noun)


state 45

   13 condition: TASO . svo_sentence

    ALA      shift, and go to state 1
    SONA     shift, and go to state 2
    WAWA     shift, and go to state 3
    LUPA     shift, and go to state 4
    ONA      shift, and go to state 5
    NANPA    shift, and go to state 6
    IJO      shift, and go to state 7
    ILO      shift, and go to state 8
    OLIN     shift, and go to state 9
    WILE     shift, and go to state 10
    MUTE     shift, and go to state 11
    OKO      shift, and go to state 12
    SEWI     shift, and go to state 13
    TENPO    shift, and go to state 14
    JAKI     shift, and go to state 15
    JO       shift, and go to state 16
    NASIN    shift, and go to state 17
    TOKI     shift, and go to state 18
    SUNO     shift, and go to state 19
    UTA      shift, and go to state 20
    ALI      shift, and go to state 21
    WALO     shift, and go to state 22
    KILI     shift, and go to state 23
    SUPA     shift, and go to state 24
    LETE     shift, and go to state 25
    AKESI    shift, and go to state 26
    NENA     shift, and go to state 27
    UTALA    shift, and go to state 28
    NIMI     shift, and go to state 29
    SINPIN   shift, and go to state 30
    SITELEN  shift, and go to state 31
    POKA     shift, and go to state 32
    MOLI     shift, and go to state 33
    PAKALA   shift, and go to state 34
    MA       shift, and go to state 35
    LEN      shift, and go to state 36
    ALE      shift, and go to state 37
    LAWA     shift, and go to state 38
    KIWEN    shift, and go to state 39
    PINI     shift, and go to state 40
    WASO     shift, and go to state 41
    KULUPU   shift, and go to state 42
    PALI     shift, and go to state 43
    JAN      shift, and go to state 44
    KUTE     shift, and go to state 46
    KALA     shift, and go to state 47
    TELO     shift, and go to state 48
    MONSI    shift, and go to state 49
    LILI     shift, and go to state 50
    KEN      shift, and go to state 110
    TOMO     shift, and go to state 52
    MAMA     shift, and go to state 53
    MIJE     shift, and go to state 54
    PONA     shift, and go to state 55
    SEME     shift, and go to state 56
    TU       shift, and go to state 57
    MELI     shift, and go to state 58
    PIMEJA   shift, and go to state 59
    PIPI     shift, and go to state 60
    NOKA     shift, and go to state 61
    KULE     shift, and go to state 62
    SOWELI   shift, and go to state 63
    SUWI     shift, and go to state 64
    ANTE     shift, and go to state 111
    SIKE     shift, and go to state 66
    KALAMA   shift, and go to state 67
    LINJA    shift, and go to state 68
    KASI     shift, and go to state 69
    SIJELO   shift, and go to state 70
    MUN      shift, and go to state 71
    PANA     shift, and go to state 72
    TAWA     shift, and go to state 73
    TAN      shift, and go to state 74
    KAMA     shift, and go to state 75
    SELO     shift, and go to state 76
    MI       shift, and go to state 77
    POKI     shift, and go to state 78
    SELI     shift, and go to state 79
    IKE      shift, and go to state 80
    PILIN    shift, and go to state 81
    WAN      shift, and go to state 82
    LUKA     shift, and go to state 83
    MANI     shift, and go to state 84
    SULI     shift, and go to state 85
    MUSI     shift, and go to state 86
    WEKA     shift, and go to state 87
    INSA     shift, and go to state 88
    LIPU     shift, and go to state 89
    MOKU     shift, and go to state 90
    SINA     shift, and go to state 91
    NI       shift, and go to state 92
    UNPA     shift, and go to state 93
    PALISA   shift, and go to state 94

    svo_sentence           go to state 112
    subject                go to state 103
    norm_noun_phase        go to state 104
    structed_noun_phase    go to state 105
    noun_phase             go to state 113
    decorated_noun_struct  go to state 107
    noun                   go to state 108
    norm_subject_noun      go to state 109


state 46

  166 norm_subject_noun: KUTE .

    $default  reduce using rule 166 (norm_subject_noun)


state 47

  129 norm_subject_noun: KALA .

    $default  reduce using rule 129 (norm_subject_noun)


state 48

  200 norm_subject_noun: TELO .

    $default  reduce using rule 200 (norm_subject_noun)


state 49

  145 norm_subject_noun: MONSI .

    $default  reduce using rule 145 (norm_subject_noun)


state 50

  160 norm_subject_noun: LILI .

    $default  reduce using rule 160 (norm_subject_noun)


state 51

   14 condition: KEN . LA
  184 norm_subject_noun: KEN .

    LA  shift, and go to state 114

    LA        [reduce using rule 184 (norm_subject_noun)]
    $default  reduce using rule 184 (norm_subject_noun)


state 52

  161 norm_subject_noun: TOMO .

    $default  reduce using rule 161 (norm_subject_noun)


state 53

  142 norm_subject_noun: MAMA .

    $default  reduce using rule 142 (norm_subject_noun)


state 54

  144 norm_subject_noun: MIJE .

    $default  reduce using rule 144 (norm_subject_noun)


state 55

  128 norm_subject_noun: PONA .

    $default  reduce using rule 128 (norm_subject_noun)


state 56

  152 norm_subject_noun: SEME .

    $default  reduce using rule 152 (norm_subject_noun)


state 57

  150 norm_subject_noun: TU .

    $default  reduce using rule 150 (norm_subject_noun)


state 58

  202 norm_subject_noun: MELI .

    $default  reduce using rule 202 (norm_subject_noun)


state 59

  177 norm_subject_noun: PIMEJA .

    $default  reduce using rule 177 (norm_subject_noun)


state 60

  126 norm_subject_noun: PIPI .

    $default  reduce using rule 126 (norm_subject_noun)


state 61

  205 norm_subject_noun: NOKA .

    $default  reduce using rule 205 (norm_subject_noun)


state 62

  194 norm_subject_noun: KULE .

    $default  reduce using rule 194 (norm_subject_noun)


state 63

  176 norm_subject_noun: SOWELI .

    $default  reduce using rule 176 (norm_subject_noun)


state 64

  190 norm_subject_noun: SUWI .

    $default  reduce using rule 190 (norm_subject_noun)


state 65

   15 condition: ANTE . LA
  135 norm_subject_noun: ANTE .

    LA  shift, and go to state 115

    LA        [reduce using rule 135 (norm_subject_noun)]
    $default  reduce using rule 135 (norm_subject_noun)


state 66

  123 norm_subject_noun: SIKE .

    $default  reduce using rule 123 (norm_subject_noun)


state 67

  158 norm_subject_noun: KALAMA .

    $default  reduce using rule 158 (norm_subject_noun)


state 68

  207 norm_subject_noun: LINJA .

    $default  reduce using rule 207 (norm_subject_noun)


state 69

  122 norm_subject_noun: KASI .

    $default  reduce using rule 122 (norm_subject_noun)


state 70

  181 norm_subject_noun: SIJELO .

    $default  reduce using rule 181 (norm_subject_noun)


state 71

  170 norm_subject_noun: MUN .

    $default  reduce using rule 170 (norm_subject_noun)


state 72

  204 norm_subject_noun: PANA .

    $default  reduce using rule 204 (norm_subject_noun)


state 73

  143 norm_subject_noun: TAWA .

    $default  reduce using rule 143 (norm_subject_noun)


state 74

  191 norm_subject_noun: TAN .

    $default  reduce using rule 191 (norm_subject_noun)


state 75

  146 norm_subject_noun: KAMA .

    $default  reduce using rule 146 (norm_subject_noun)


state 76

  188 norm_subject_noun: SELO .

    $default  reduce using rule 188 (norm_subject_noun)


state 77

   17 subject: MI .
  117 noun: MI .
